<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.morePages.MapFragment">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/info_layout"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="10dp">

        <!-- Muito Fraco -->
        <LinearLayout
            android:id="@+id/muito_fraco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:paddingHorizontal="15dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:text="@string/very_weak"
                android:gravity="center"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:src="@drawable/marker_red" />

        </LinearLayout>

        <!-- Fraco -->
        <LinearLayout
            android:id="@+id/fraco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/muito_fraco"
            android:weightSum="10"
            android:paddingHorizontal="15dp"
            android:paddingTop="2dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:text="@string/weak"
                android:gravity="center"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:src="@drawable/marker_orange" />

        </LinearLayout>

        <!-- Médio -->
        <LinearLayout
            android:id="@+id/medio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/fraco"
            android:weightSum="10"
            android:paddingHorizontal="15dp"
            android:paddingTop="2dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:text="@string/medium"
                android:gravity="center"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:src="@drawable/marker_yellow" />

        </LinearLayout>

        <!-- Bom -->
        <LinearLayout
            android:id="@+id/bom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/medio"
            android:weightSum="10"
            android:paddingHorizontal="15dp"
            android:paddingTop="2dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:text="@string/good"
                android:gravity="center"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:src="@drawable/marker_green" />

        </LinearLayout>

        <!-- Excelente -->
        <LinearLayout
            android:id="@+id/excelente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/bom"
            android:weightSum="10"
            android:paddingHorizontal="15dp"
            android:paddingTop="2dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:text="@string/excellent"
                android:gravity="center"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:src="@drawable/marker_blue" />

        </LinearLayout>

        <!-- More -->
        <LinearLayout
            android:id="@+id/mais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/excelente"
            android:weightSum="10"
            android:paddingHorizontal="15dp"
            android:paddingTop="2dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:text="@string/more"
                android:gravity="center"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:src="@drawable/marker_purple" />

        </LinearLayout>

        <!-- Button -->
        <LinearLayout
            android:id="@+id/botao"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_below="@id/mais"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="10dp">

            <Button
                android:id="@+id/hideBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hide"
                android:textSize="10sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white_card"/>

        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/info_icon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="10dp"
        android:visibility="invisible"
        android:src="@drawable/ic_info"/>

</RelativeLayout>